# DoseRight

hardware/: .gitignore  README.md
hardware/main/: CMakeLists.txt  main.c
hardware/main/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
hardware/main/ui/components/: ui_comp_hook.c
hardware/main/ui/custom/: alert_audio.c  alert_audio.h  alert_screen.c  alert_screen.h  help_screen.c  help_screen.h  main_menu_screen.c  main_menu_screen.h  profile_screen.c  profile_screen.h  settings_screen.c  settings_screen.h  wifi_list_screen.c  wifi_list_screen.h
hardware/main/ui/images/: ui_img_imagesbottle_png.c
hardware/main/ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_Screen4.c  ui_Screen4.h  ui_WifiScreen.c  ui_WifiScreen.h
software/: README.md
software/backend/: README.md
software/frontend/: README.md
